<resources>
    <string name="app_name">Car Rental</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_vehicle">Tambah Kendaraan</string>
    <string name="category">Kategori</string>
    <string name="seats">Seats</string>
    <string name="image_url">Image URL</string>
    <string name="price">Harga</string>
    <string name="mileage">Total Jarak Tempuh</string>
    <string name="add">Tambah</string>
    <string name="manufacturer">Pabrikan</string>
    <string name="model">Model</string>
    <string name="reset">Reset</string>
    <string name="add_vehicle_category">Tambah Kategori</string>
    <string name="available">Tersedia</string>
    <string name="view_result">Lihat Hasil</string>
    <string name="year">Tahun</string>
    <string name="load">Muat</string>
    <string name="todo">TODO</string>
    <string name="category_id">ID Kategori</string>
    <string name="select_color">Pilih Warna</string>
    <string name="booking_complete">Booking Selesai</string>
    <string name="booking_id_dummy">BookingID: 1234</string>
    <string name="email">Email:</string>
    <string name="rate">Tarif:</string>
    <string name="some_date_sample">03:00PM\t\tWeb, Dec 17</string>
    <string name="_359">IDR 3590000</string>
    <string name="total">Total:</string>
    <string name="your_booking_is_done">Pesanan Anda Telah Selesai</string>
    <string name="driver_details">Detail Pengemudi</string>
    <string name="name">Nama:</string>
    <string name="_2020_toyota_avalon">2020 Toyota Avalon</string>
    <string name="phone">Phone:</string>
    <string name="_11_00pm_t_tweb_dec_05">11:00PM\t\tWeb, Dec 05</string>
    <string name="dummy_email_string">abc.123@gmail.com</string>
    <string name="dummy_name">Namanya Ganti Nanti</string>
    <string name="icon">icon</string>
    <string name="dummy_phone_number">(62) 813 0003 0000</string>
    <string name="dummy_rate">IDR 500000/Hari</string>
    <string name="insurance">Asuransi</string>
    <string name="dummy_insurance_rate">IDR 0/Hari</string>
    <string name="summary">Ringkasan</string>
    <string name="none">Tidak Ada</string>
    <string name="total_days">Total Hari:</string>
    <string name="drop_off">Pengembalian:</string>
    <string name="dummy_total_days">9 Hari</string>
    <string name="pick_up">Penjemputan:</string>
    <string name="welcome_to">Welcome to</string>
    <string name="rent_a_car">Rent-A-Car</string>
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="register">Register</string>
    <string name="forgot_password">forgot password?</string>
    <string name="populate">Populate</string>
    <string name="customer">Customer</string>
    <string name="vehicle_category">Vehicle Category</string>
    <string name="vehicle">Vehicle</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name *</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name *</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="driver_license">Driver License *</string>
    <string name="expiry_date">Expiry Date *</string>
    <string name="city">City *</string>
    <string name="date_format">YYYY-MM-DD</string>
    <string name="postal_code">Postal Code *</string>
    <string name="password_important">Password *</string>
    <string name="already_a_member">Already a member?</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="phone_number">Phone Number *</string>
    <string name="street">Street *</string>
    <string name="select">Select</string>
    <string name="total_20_label">Total: 20</string>
    <string name="vehicle_name">Nama Kendaraan</string>
    <string name="book">Pinjam</string>
    <string name="details">Detail</string>
    <string name="dummy_price_label">IDR 7500000/hari</string>
    <string name="choose">Pilih</string>
    <string name="a_car_label">Mobil</string>
    <string name="filter">Filter</string>
    <string name="my_bookings">Daftar Pinjaman</string>
    <string name="logout">Logout</string>
    <string name="bookingid_label">BookingID:</string>
    <string name="dummy_pickup">07:33 p.m January, 1 2020</string>
    <string name="dummy_car_title">2020 Toyota Avalon</string>
    <string name="waiting_for_approval">Menunggu Persetujuan</string>
    <string name="dummy_return_date">07:33 p.m January, 10 2020</string>
    <string name="return_label">Dikembalikan:</string>
    <string name="name_label">Nama:</string>
    <string name="booking_id_sample">1234</string>
    <string name="pickup_label">Pengambilan:</string>
    <string name="dummy_booking_id">BookingID: 1234</string>
    <string name="total_label">Total:</string>
    <string name="return_car">Mengembalikan</string>
    <string name="dummy_total_price">IDR 35900000</string>
    <string name="year_manufacturer_model">Tahun Produksi</string>
    <string name="collision_damage_waiver">Collision Damage Waiver</string>
    <string name="personal_accident_insurance">Asuransi Kecelakaan</string>
    <string name="supplemental_liability_protection">Proteksi Tambahan</string>
    <string name="not_available">Tidak Tersedia</string>
    <string name="type">Type</string>
    <string name="personal_effects_coverage">Jaminan Perseorangan</string>
    <string name="vehicle_specs">Spesifikasi Kendaraan</string>
    <string name="book_this_car">Pinjam</string>
    <string name="basic">Basic</string>
    <string name="dummy_gold_rate">$15</string>
    <string name="dummy_basic_rate">$0</string>
    <string name="dummy_platinum_rate">$25</string>
    <string name="premium">Premium</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
</resources>
