<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_card"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/vehicleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:text="@string/dummy_car_title"
                android:textColor="@color/statusBarColor"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/_bookingID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/bookingIDText"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/bookingid_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bookingID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="15dp"
                    android:paddingEnd="8dp"
                    android:text="@string/booking_id_sample"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/_customerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/customerNameText"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/name_label" />

                <TextView
                    android:id="@+id/customerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="15dp"
                    android:paddingEnd="8dp"
                    android:text="@string/dummy_name"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/_pickupDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/pickupDateText"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/pickup_label" />

                <TextView
                    android:id="@+id/pickupDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="15dp"
                    android:paddingEnd="8dp"
                    android:text="@string/dummy_pickup"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/_returnDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/returnDateText"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/return_label" />

                <TextView
                    android:id="@+id/returnDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="15dp"
                    android:paddingEnd="8dp"
                    android:text="@string/dummy_return_date"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/_bookingStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/bookingStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/waiting_for_approval"
                    android:textColor="#FF6D00" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>